Fix "Support test.filter for jstests"
All tests were skipped because the default filter is pwd.
Now the default is ".*".

R=mdjones@chromium.org

Review URL: https://codereview.chromium.org/856953002

--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
   <!-- Configure path to GWT SDK -->
   <property name="gwt.sdk" location="third_party/gwt-2.7.0" />
 
-  <property name="test.filter" location="" />
+  <property name="test.filter" value=".*" />
 
   <path id="project.class.path">
     <pathelement location="war/WEB-INF/classes"/>
