--- a/build.xml
+++ b/build.xml
@@ -163,19 +163,6 @@
     </apply>
   </target>
 
-  <target name="javac.tests" depends="setup, javac, protoc.tests" description="Compiles test code">
-    <mkdir dir="war/WEB-INF/test/classes"/>
-    <javac includes="**" encoding="utf-8"
-      source="1.7" target="1.7" nowarn="true"
-      destdir="war/WEB-INF/test/classes"
-      debug="true" debuglevel="lines,vars,source">
-      <src refid="project.java.test.path" />
-      <src refid="protoc.test.java.output" />
-      <classpath location="third_party/junit/junit-4.11.jar"/>
-      <classpath refid="project.class.path"/>
-    </javac>
-  </target>
-
   <target name="javac.jstests" depends="javac, protoc.tests" description="Compiles test code">
     <mkdir dir="war/WEB-INF/jstest/classes"/>
     <javac includes="**" encoding="utf-8"
@@ -226,76 +213,8 @@
     </exec>
   </target>
 
-  <target name="test.dev" depends="javac.tests" description="Run development mode tests">
-    <mkdir dir="out/reports/htmlunit.dev" />
-    <junit
-        fork="yes"
-        printsummary="yes"
-        haltonfailure="no"
-        failureproperty="test.dev.failed"
-        showoutput="yes"
-        logfailedtests="yes"
-        >
-      <jvmarg line="-Xmx256m" />
-      <sysproperty key="gwt.args" value="-logLevel WARN" />
-      <sysproperty key="java.awt.headless" value="true" />
-      <classpath>
-        <path refid="project.class.path" />
-        <path refid="project.java.path" />
-        <path refid="project.java.test.path" />
-        <path refid="protoc.test.java.output" />
-        <pathelement location="${gwt.sdk}/validation-api-1.0.0.GA.jar" />
-        <pathelement location="${gwt.sdk}/validation-api-1.0.0.GA-sources.jar" />
-        <pathelement location="third_party/junit/junit-4.11.jar" />
-      </classpath>
-      <batchtest todir="out/reports/htmlunit.dev" >
-        <fileset dir="test" >
-          <include name="**/DomDistillerTestSuite.java" />
-        </fileset>
-      </batchtest>
-      <formatter type="brief" usefile="false" />
-      <formatter type="plain" />
-      <formatter type="xml" />
-    </junit>
-    <fail message="Test failure detected (test.dev)." if="test.dev.failed" />
-  </target>
-
-  <target name="test.prod" depends="javac.tests" description="Run production mode tests">
-    <mkdir dir="out/reports/htmlunit.prod" />
-    <junit
-        fork="yes"
-        printsummary="yes"
-        haltonfailure="no"
-        failureproperty="test.dev.failed"
-        showoutput="yes"
-        logfailedtests="yes"
-        >
-      <jvmarg line="-Xmx256m" />
-      <sysproperty key="gwt.args" value="-prod -logLevel WARN" />
-      <sysproperty key="java.awt.headless" value="true" />
-      <classpath>
-        <path refid="project.class.path" />
-        <path refid="project.java.path" />
-        <path refid="project.java.test.path" />
-        <path refid="protoc.test.java.output" />
-        <pathelement location="${gwt.sdk}/validation-api-1.0.0.GA.jar" />
-        <pathelement location="${gwt.sdk}/validation-api-1.0.0.GA-sources.jar" />
-        <pathelement location="third_party/junit/junit-4.11.jar" />
-      </classpath>
-      <batchtest todir="out/reports/htmlunit.prod" >
-        <fileset dir="test" >
-          <include name="**/DomDistillerTestSuite.java" />
-        </fileset>
-      </batchtest>
-      <formatter type="brief" usefile="false" />
-      <formatter type="plain" />
-      <formatter type="xml" />
-    </junit>
-    <fail message="Test failure detected (test.prod)." if="test.prod.failed" />
-  </target>
-
   <target name="test"
-    depends="jstests, test.dev, test.prod, package"
+    depends="jstests, package"
     description="Run development and production mode tests">
   </target>
 
