--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,8 @@
 
   <property name="test.filter" value=".*" />
 
+  <property name="test.debug_level" value="0" />
+
   <path id="project.class.path">
     <pathelement location="war/WEB-INF/classes"/>
     <pathelement location="${gwt.sdk}/gwt-user.jar"/>
@@ -209,7 +211,7 @@
     <exec executable="xvfb-run" failonerror="true">
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="./run_jstests.py"/>
-      <arg line="--filter ${test.filter}"/>
+      <arg line="--filter ${test.filter} --debug_level ${test.debug_level}"/>
     </exec>
   </target>
 
