Make the "test" target not depend on "package"
Depending on package requires that we do the normal optimized gwt
compilation. This basically doubles the time it takes to run tests and
doesn't really gain us anything.

R=wychen@chromium.org

Committed: d35445ec6897bb90882bee1899e30c67213a0063

Review URL: https://codereview.chromium.org/884043005

--- a/build.xml
+++ b/build.xml
@@ -216,8 +216,8 @@
   </target>
 
   <target name="test"
-    depends="jstests, package"
-    description="Run development and production mode tests">
+    depends="jstests"
+    description="Run tests">
   </target>
 
   <target name="build" depends="gwtc" description="Build this project" />
