Add JS tests to package and suppress log output.
- Adds the JS tests to the package so the JS tests can be run in chromium.
- Adds support for suppressing all log output (except the log builder), so
  the log can be fetched directly from the log builder when running the
  tests in Chromium. This is set by setting console_log=0 in the URL for
  the test page, or when running run_jstests.py just add --console_log=0
  as a parameter.
- Moves the parsing of the debug_level when running tests to run() from
  runWithFilter() in JsTestEntry.

R=cjhopman@chromium.org

Review URL: https://codereview.chromium.org/879893003

--- a/build.xml
+++ b/build.xml
@@ -133,12 +133,16 @@
 
   </target>
 
-  <target name="package" depends="extractjs, protoc.json"
+  <target name="package" depends="extractjs, extractjs.jstests, protoc.json"
       description="Copies the main build artifacts into the out/package directory." >
     <mkdir dir="out/extension"/>
     <mkdir dir="out/package"/>
     <mkdir dir="out/package/js"/>
     <mkdir dir="out/package/proto"/>
+    <mkdir dir="out/package/test"/>
+    <mkdir dir="out/package/test/data"/>
+    <mkdir dir="out/package/test/data/out"/>
+    <mkdir dir="out/package/test/data/war"/>
 
     <copy file="out/domdistiller.js" todir="out/package/js" />
     <copy todir="out/package/proto_gen">
@@ -152,6 +156,9 @@
     <copy todir="out/extension">
       <fileset dir="extension"/>
     </copy>
+
+    <copy file="out/domdistillerjstest.js" todir="out/package/test/data/out" />
+    <copy file="war/test.html" todir="out/package/test/data/war" />
   </target>
 
 
@@ -234,6 +241,7 @@
     <delete dir="war/WEB-INF" failonerror="false" />
     <delete dir="war/domdistiller" failonerror="false" />
     <delete dir="war/domdistillerjs" failonerror="false" />
+    <delete dir="war/domdistillerjstest" failonerror="false" />
     <delete file="war/DomDistiller.war" failonerror="false" />
     <delete dir="gwt-unitCache" failonerror="false" />
     <delete dir="out" failonerror="false" />
