--- a/build.xml
+++ b/build.xml
@@ -245,6 +245,7 @@
       description="Run jstests for the Linux platform">
     <exec executable="xvfb-run" failonerror="true">
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
+      <arg value="--auto-servernum"/>
       <arg value="./run_jstests.py"/>
       <arg line="--filter ${test.filter} --debug_level ${test.debug_level}"/>
     </exec>
