--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
   <!-- Configure path to GWT SDK -->
   <property name="gwt.sdk" location="third_party/gwt-2.7.0" />
 
-  <property name="test.filter" value=".*" />
+  <property name="test.filter" value="*" />
 
   <property name="test.debug_level" value="0" />
 
