--- a/build.xml
+++ b/build.xml
@@ -227,7 +227,7 @@
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="--auto-servernum"/>
       <arg value="./run_jstests.py"/>
-      <arg line="--filter ${test.filter} --debug_level ${test.debug_level}"/>
+      <arg line="--filter=${test.filter} --debug_level ${test.debug_level}"/>
     </exec>
   </target>
 
@@ -236,7 +236,7 @@
     <exec executable="python" failonerror="true">
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="./run_jstests.py"/>
-      <arg line="--filter ${test.filter} --debug_level ${test.debug_level}"/>
+      <arg line="--filter=${test.filter} --debug_level ${test.debug_level}"/>
     </exec>
   </target>
 
