Support running tests in random order
This helps catch bad dependencies between test cases.

Example usage:
$ ant [run]test -Dtest.shuffle=1

Inspired by Testing on the Toilet (TotT) Episode 376:
Don't Alter Shared Environments Between Tests.
http://tott/2015/04/episode-376-dont-alter-shared.html

BUG=483172
R=nyquist@chromium.org

Review URL: https://codereview.chromium.org/1113733002

--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,8 @@
 
   <property name="test.debug_level" value="0" />
 
+  <property name="test.shuffle" value="0" />
+
   <condition property="isLinux">
     <and>
       <os family="unix" />
@@ -227,7 +229,7 @@
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="--auto-servernum"/>
       <arg value="./run_jstests.py"/>
-      <arg line="--filter=${test.filter} --debug_level ${test.debug_level}"/>
+      <arg line="--filter=${test.filter} --debug_level ${test.debug_level} --shuffle ${test.shuffle}"/>
     </exec>
   </target>
 
@@ -236,7 +238,7 @@
     <exec executable="python" failonerror="true">
       <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
       <arg value="./run_jstests.py"/>
-      <arg line="--filter=${test.filter} --debug_level ${test.debug_level}"/>
+      <arg line="--filter=${test.filter} --debug_level ${test.debug_level} --shuffle ${test.shuffle}"/>
     </exec>
   </target>
 
