Avoid chromedriver elsewhere if any
Make sure the chromedriver installed by install-build-deps.sh is used.
Before this change, if chromedriver is already installed and is in $PATH,
that would be used instead of the one installed by install-build-deps.sh.

Also downgrade chromedriver to version 2.8, in order to be compatible
with the Chrome on drone.io (M30 dev) and the current one (M45) at the
same time. chromedriver doesn't have to be pinned to 2.8 after "Update
Chrome if it is too old" (https://crrev.com/1159743006/).

R=kuan@chromium.org, mdjones@chromium.org

Review URL: https://codereview.chromium.org/1148083004

--- a/build.xml
+++ b/build.xml
@@ -230,7 +230,7 @@
   <!-- Run jstests for the Linux platform -->
   <target name="-jstests.linux" if="isLinux">
     <exec executable="xvfb-run" failonerror="true">
-      <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
+      <env key="PATH" path="${basedir}/buildtools:${env.PATH}"/>
       <arg value="--auto-servernum"/>
       <arg value="./run_jstests.py"/>
       <arg line="--filter=${test.filter}
@@ -244,7 +244,7 @@
   <!-- Run jstests for the Mac OS X platform -->
   <target name="-jstests.mac" if="isMac">
     <exec executable="python" failonerror="true">
-      <env key="PATH" path="${env.PATH}:${basedir}/buildtools"/>
+      <env key="PATH" path="${basedir}/buildtools:${env.PATH}"/>
       <arg value="./run_jstests.py"/>
       <arg line="--filter=${test.filter}
         --debug_level ${test.debug_level}
