Make TableClassifierTest independent of browser window dimention
Test:
Change the xvfb resolution to 10x1000 and 1000x10 to trigger the failures
before this CL.

R=cjhopman@chromium.org, kuan@chromium.org

Review URL: https://codereview.chromium.org/1142323005

--- a/build.xml
+++ b/build.xml
@@ -232,6 +232,8 @@
     <exec executable="xvfb-run" failonerror="true">
       <env key="PATH" path="${basedir}/buildtools:${env.PATH}"/>
       <arg value="--auto-servernum"/>
+      <arg value="-s"/>
+      <arg value="-screen 0 1024x768x24"/>
       <arg value="./run_jstests.py"/>
       <arg line="--filter=${test.filter}
         --debug_level ${test.debug_level}
