Re-enable tests containing <track> in CI
The tests are disabled in https://codereview.chromium.org/1971443005/.
Since https://codereview.chromium.org/1967493002/ is on stable channel,
it's available on CI as well.

R=mdjones@chromium.org

Review URL: https://codereview.chromium.org/2176753004 .

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
 script:
   # Use system python for protobuf package.
   - export PATH='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
-  - ant test -Dtest.shuffle=1 -Dtest.repeat=10 -Dtest.filter='-*.WebVideoTest.testGenerateOutput*:*.testMakeAllLinksAbsolute'
+  - ant test -Dtest.shuffle=1 -Dtest.repeat=10
   - ant package
