Update Travis CI environment from Ubuntu 14.04 to 18.04
Manually downgrades Java to JDK 8 since Open JDK 8 is no longer
supported on Ubuntu 18.04.

Bug: None
Change-Id: Id6a0d1a0bcfceed2c0e6e3530d49f4fc93f73b4d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/dom-distiller/+/1717924
Reviewed-by: Tommy Nyquist <nyquist@chromium.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,32 @@
 sudo: required
-# Chrome is no longer supported on Ubuntu Precise (12.04), so use Trusty (14.04).
-dist: trusty
+
+# Ubuntu 18.04 (Bionic)
+dist: bionic
 
 language: java
+
 before_install: git log --oneline -n 5
+
 install:
+  - google-chrome --version
   - sudo ./install-build-deps.sh
+  # Fix the Java environment in Travis CI. Ubuntu 18.04 uses JDK 11 and cannot downgrade to 8.
+  - unset JAVA_HOME
+
 script:
   # Use system python for protobuf package.
   - export PATH='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
   - hooks/pre-commit
+  - which java
+  - java -Xmx32m -version
+  - javac -J-Xmx32m -version
+  - google-chrome --version
   - ant test -Dtest.shuffle=1 -Dtest.repeat=10
   - ant package
+
+# Each item under env is a testing environment.
 env:
+  # Use stock version of Chrome
   - CHROME_MIN_VERSION=49
+  # Update to latest Chrome
   - CHROME_MIN_VERSION=99
